Source/WebCore: [MSE] WebContent/GPU process will hang when appending data under some circumstances. https://bugs.webkit.org/show_bug.cgi?id=222462

Patch by Jean-Yves Avenard <jya@apple.com> on 2021-02-26
Reviewed by Jer Noble.

No new test, this is covered by one of the MSE WPT.

* platform/MediaSample.h:
Add an optional parameter to MediaSample::divide to use the buffer's end time
to determine where to divide it.
* platform/graphics/SourceBufferPrivate.cpp:
(WebCore::SourceBufferPrivate::didReceiveSample):
When attempting to split the MediaSample so none ends after the
appendWindowEnd attribute, use the MediaSample's end time as split point.
* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.h:
* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.mm:
(WebCore::MediaSampleAVFObjC::divide):
Expand the divide method to split the content according to the end time.
Side fix; use OutputPresentationTimeStamp thorough the devide method.
All time and duration comparisons made in the SourceBuffer are based on
the Output times, so to ensure consistency we use the output time when
looking on where to split.
* platform/graphics/gstreamer/MediaSampleGStreamer.h:
* platform/mock/mediasource/MockSourceBufferPrivate.cpp:
Update per new declaration. New argument is unused.

Tools:
[MSE] Ensure MediaSample is properly trimmed.
https://bugs.webkit.org/show_bug.cgi?id=222462

Patch by Jean-Yves Avenard <jya@apple.com> on 2021-02-26
Reviewed by Jer Noble.

* TestWebKitAPI/Tests/WebCore/SampleMap.cpp:
Update per new MediaSample::divide prototype.

Canonical link: https://commits.webkit.org/234651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273604 268f45cc-cd09-0410-ab3c-d52691b4dbfc